Subiendo cambios de validaciones

--- a/app/src/main/res/layout/activity_add_user.xml
+++ b/app/src/main/res/layout/activity_add_user.xml
@@ -170,7 +170,8 @@
                             android:id="@+id/tilClave"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            app:hintEnabled="false">
+                            app:hintEnabled="false"
+                            app:endIconMode="password_toggle">
 
                             <com.google.android.material.textfield.TextInputEditText
                                 android:id="@+id/etClave"
@@ -198,12 +199,15 @@
                             android:textSize="16sp" />
 
                         <com.google.android.material.textfield.TextInputLayout
+                            android:id="@+id/tilConfirmarClave"
                             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            app:hintEnabled="false">
+                            app:hintEnabled="false"
+                            app:endIconMode="password_toggle">
 
                             <com.google.android.material.textfield.TextInputEditText
+                                android:id="@+id/etConfirmarClave"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:hint="Confirmar"
