Cambios de ReciclerView en usuarios

--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -128,7 +128,7 @@
                 android:layout_height="match_parent"
                 android:contentDescription="Imagen de perfil"
                 android:scaleType="centerCrop"
-                android:src="@drawable/ic_avatar_img" />
+                android:src="@drawable/img_profile" />
         </com.google.android.material.card.MaterialCardView>
 
         <!--  Primer input -->
