--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -39,7 +39,7 @@
                 android:layout_height="match_parent"
                 android:contentDescription="Imagen de perfil"
                 android:scaleType="centerCrop"
-                android:src="@drawable/ic_avatar_img" />
+                android:src="@drawable/img_profile" />
         </com.google.android.material.card.MaterialCardView>
 
 
