--- a/app/src/main/res/layout/item_rv_usuario.xml
+++ b/app/src/main/res/layout/item_rv_usuario.xml
@@ -1,17 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:padding="12dp"
+    android:background="@android:color/white"
+    android:elevation="2dp"
+    android:gravity="center_vertical"
+    android:layout_marginBottom="8dp">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="4dp"
-        android:background="@android:color/white"
-        android:elevation="2dp"
-        android:gravity="center_vertical"
-        android:orientation="horizontal"
-        android:padding="12dp">
+<!--    <LinearLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:background="@android:color/white"-->
+<!--        android:elevation="2dp"-->
+<!--        android:gravity="center_vertical"-->
+<!--        android:orientation="horizontal"-->
+<!--        android:padding="12dp">-->
 
         <LinearLayout
             android:layout_width="0dp"
@@ -37,15 +42,6 @@
                 android:textSize="13sp" />
         </LinearLayout>
 
-<!--        <TextView-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_marginEnd="8dp"-->
-<!--            android:text="Admin"-->
-<!--            android:textColor="#000000"-->
-<!--            android:textSize="15sp"-->
-<!--            android:textStyle="bold" />-->
-
         <ImageButton
             android:id="@+id/btnEditar"
             android:layout_width="50dp"
@@ -63,6 +59,4 @@
             android:contentDescription="Eliminar"
             android:src="@drawable/ic_delete" />
     </LinearLayout>
-
-
-</LinearLayout>
+<!--</LinearLayout>-->
