--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -303,7 +303,8 @@
             android:id="@+id/btnGuardar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:backgroundTint="#1F41BB"
+            android:layout_marginTop="20dp"
+            android:backgroundTint="#0B70E0"
             android:padding="16dp"
             android:text="Guardar"
             android:textAllCaps="false"
