--- a/app/src/main/res/layout/activity_add_product.xml
+++ b/app/src/main/res/layout/activity_add_product.xml
@@ -14,6 +14,7 @@
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
         android:orientation="horizontal"
+        android:layout_marginTop="30dp"
         android:padding="16dp">
 
         <com.google.android.material.button.MaterialButton
@@ -65,6 +66,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
                 android:layout_marginTop="20dp"
                 android:text="Nombre del producto"
                 android:textColor="@color/black"
@@ -74,13 +76,15 @@
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
                 app:hintEnabled="false">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/inputNombre"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="40dp"
+                    android:layout_marginBottom="20dp"
                     android:hint="Nombre del producto" />
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -88,6 +92,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
                 android:layout_marginTop="12dp"
                 android:text="Código del producto"
                 android:textColor="@color/black"
@@ -97,13 +102,15 @@
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
                 app:hintEnabled="false">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/inputCodigo"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="40dp"
+                    android:layout_marginBottom="20dp"
                     android:hint="Código del producto" />
 
             </com.google.android.material.textfield.TextInputLayout>
@@ -170,7 +177,7 @@
                             android:id="@+id/inputPrecio"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginBottom="40dp"
+                            android:layout_marginBottom="20dp"
                             android:hint="$0" />
 
                     </com.google.android.material.textfield.TextInputLayout>
@@ -219,8 +226,8 @@
                 android:id="@+id/btnGuardarProducto"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="70dp"
-                android:backgroundTint="#1F41BB"
+                android:layout_marginTop="40dp"
+                android:backgroundTint="#0B70E0"
                 android:padding="20dp"
                 android:text="Guardar producto"
                 android:textAllCaps="false"
