--- a/app/src/main/res/layout/activity_edit_product.xml
+++ b/app/src/main/res/layout/activity_edit_product.xml
@@ -12,6 +12,7 @@
         android:id="@+id/topBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
         android:orientation="horizontal"
         android:padding="16dp"
         android:gravity="center_vertical">
@@ -65,6 +66,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
                 android:text="Nombre del producto"
                 android:textColor="@color/black"
                 android:layout_marginTop="20dp"
@@ -74,13 +76,15 @@
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
                 app:hintEnabled="false">
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/etNombre"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Nombre del producto"
-                    android:layout_marginBottom="40dp"
+                    android:layout_marginBottom="20dp"
                     />
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -88,6 +92,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
                 android:layout_marginTop="12dp"
                 android:text="Código del producto"
                 android:textColor="@color/black"
@@ -97,13 +102,15 @@
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
                 app:hintEnabled="false">
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/etCodigo"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Código del producto"
-                    android:layout_marginBottom="40dp"
+                    android:layout_marginBottom="20dp"
                     />
 
             </com.google.android.material.textfield.TextInputLayout>
@@ -169,7 +176,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:hint="$0"
-                            android:layout_marginBottom="40dp"
+                            android:layout_marginBottom="20dp"
                             />
 
                     </com.google.android.material.textfield.TextInputLayout>
@@ -217,12 +224,12 @@
                 android:id="@+id/btnGuardarProducto"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:backgroundTint="#1F41BB"
+                android:backgroundTint="#0B70E0"
                 android:text="Guardar producto"
                 android:textAllCaps="false"
                 android:textColor="#FFFFFF"
                 android:padding="20dp"
-                android:layout_marginTop="70dp"
+                android:layout_marginTop="40dp"
                 app:cornerRadius="50dp"/>
         </LinearLayout>
     </ScrollView>
