--- a/app/src/main/res/layout/activity_edit_user.xml
+++ b/app/src/main/res/layout/activity_edit_user.xml
@@ -141,7 +141,7 @@
                     android:id="@+id/btnGuardar"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:backgroundTint="#1F41BB"
+                    android:backgroundTint="#0B70E0"
                     android:padding="16dp"
                     android:text="Guardar cambios"
                     android:textAllCaps="false"
