--- a/app/src/main/res/layout/activity_users.xml
+++ b/app/src/main/res/layout/activity_users.xml
@@ -119,7 +119,7 @@
             android:layout_marginEnd="20dp"
             android:contentDescription="Agregar un nuevo usuario"
             android:src="@drawable/ic_plus"
-            app:backgroundTint="#1F41BB"
+            app:backgroundTint="#0B70E0"
             app:elevation="0dp"
             app:iconSize="20dp"
             app:tint="@android:color/white"
