--- a/app/src/main/res/layout/item_historial.xml
+++ b/app/src/main/res/layout/item_historial.xml
@@ -148,7 +148,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Completada"
-                android:textColor="#2196F3"
+                android:textColor="#0B70E0"
                 android:textSize="12sp"
                 android:textStyle="bold" />
 
